--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ bb8 = "0.9.0"
 bb8-redis = "0.20.0"
 dotenvy = "0.15.7"
 redis = { version = "0.28.2", features = ["json"] }
-reqwest = { version = "0.12.12", features = ["json"] }
+reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
