--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ axum = "0.8.1"
 bb8 = "0.9.0"
 bb8-redis = "0.20.0"
 dotenvy = "0.15.7"
+env_logger = "0.11.6"
+log = "0.4.26"
 redis = { version = "0.28.2", features = ["json"] }
 reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.217", features = ["derive"] }
